--- a/config/config.yaml
+++ b/config/config.yaml
@@ -7,10 +7,12 @@ data_ingestion:
   local_data_file: artifacts/data_ingestion/data.zip
   unzip_dir: artifacts/data_ingestion
 
+
 data_validation:
   root_dir: artifacts/data_validation
   STATUS_FILE: artifacts/data_validation/status.txt
   ALL_REQUIRED_FILES: ["train", "test", "validation"]
+
 
 data_transformation:
   root_dir: artifacts/data_transformation
@@ -25,9 +27,9 @@ model_trainer:
 
 
 
-# model_evaluation:
-#   root_dir: artifacts/model_evaluation
-#   data_path: artifacts/data_transformation/samsum_dataset
-#   model_path: artifacts/model_trainer/pegasus-samsum-model
-#   tokenizer_path: artifacts/model_trainer/tokenizer
-#   metric_file_name: artifacts/model_evaluation/metrics.csv
+model_evaluation:
+  root_dir: artifacts/model_evaluation
+  data_path: artifacts/data_transformation/samsum_dataset
+  model_path: artifacts/model_trainer/pegasus-samsum-model
+  tokenizer_path: artifacts/model_trainer/tokenizer
+  metric_file_name: artifacts/model_evaluation/metrics.csv
